[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-cli-proxy"
version = "1.1.0"
description = "OpenAI-compatible API server powered by Claude Code CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Legit Labs", email = "jack@legitlabs.com" },
]
keywords = ["claude", "anthropic", "openai", "proxy", "api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/buddy-pieron/claude-code-cli-proxy"
Issues = "https://github.com/buddy-pieron/claude-code-cli-proxy/issues"

[project.scripts]
claude-code-proxy = "server:main"

[tool.setuptools]
py-modules = ["server", "claude_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
